fixed the stupid  width of the hero-container thatt was causing horizontal scrolling

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,13 @@
+html {
+  overflow: hidden;
+}
+
 body {
   margin: 0;
   color-scheme: dark;
   font-family: 'Oxygen', sans-serif;
+
+
 }
 
 
