--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -2,7 +2,7 @@
     display: flex;
     z-index: 1;
     position: relative;
-    width: 100vw;
+    width: 100%;
     height: 100vh;
 }
 
